syntax = "proto3";

package serval.base;

message DeleteRequest {
    string engine_type = 1;
    string engine_id = 2;
}

message CancelJobRequest {
    string engine_type = 1;
    string engine_id = 2;
}

message GetQueueSizeRequest {
    string engine_type = 1;
}

message GetQueueSizeResponse {
    int32 size = 1;
}

message ScriptureChapters {
    repeated int32 chapters = 1;
}

message Corpus {
    string id = 1;
    string language = 2;
    repeated CorpusFile files = 3;
}

message CorpusFile {
    string location = 1;
    FileFormat format = 2;
    string text_id = 3;
}

enum FileFormat {
    FILE_FORMAT_TEXT = 0;
    FILE_FORMAT_PARATEXT = 1;
}

message AlignedWordPair {
    int32 source_index = 1;
    int32 target_index = 2;
}